# idlescrollrpg

./: .gitignore  Cargo.toml  README.md
crates/belt_core/: Cargo.toml
crates/belt_core/src/: lib.rs
crates/data_studio_core/: Cargo.toml
crates/data_studio_core/src/: lib.rs
crates/game_data_adapter/: Cargo.toml
crates/game_data_adapter/src/: lib.rs
crates/generated_data/: Cargo.toml
crates/generated_data/src/: lib.rs  relation_cache.rs  schema_types.rs  table_accessors.rs
crates/generated_data/tests/: sample_project_accessors.rs
crates/tools/: Cargo.toml
crates/tools/src/: aseprite.rs  game.rs  main.rs  play.rs  serve.rs
docs/: ARCHITECTURE.md  NEXT_STEPS.md  PLAN.md  SESSION_HANDOFF.md  UNITY_DATA_TABLE_ASSET_SPEC.md
projects/sample/: project.json
projects/sample/data/: account_energy_config.json  alchemy_recipe.json  behavior_rule.json  cell_offset.json  cell_pattern.json  condition_def.json  drop_entry.json  drop_table.json  forge_ingredient.json  forge_recipe.json  item_def.json  map_def.json  recipe_ingredient.json  refinement_effect.json  refinement_option_pool_entry.json  refinement_recipe.json  skill_def.json  skill_effect.json  skill_step.json  special_option_def.json  special_option_skill_mutation.json  special_option_stat_delta.json  special_trigger_condition.json  special_trigger_def.json  special_trigger_effect.json  sprite_animation.json  sprite_frame.json  stat_def.json  storage_tab_config.json  texture_asset.json  unit_base_stat.json  unit_def.json  unit_group.json  unit_group_member.json  (+5 more)
scripts/: package_tools.ps1
(+2 files in other folders)
