[package]
name = "belt_tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
belt_core = { path = "../belt_core" }
data_studio_core = { path = "../data_studio_core" }
game_data_adapter = { path = "../game_data_adapter" }
generated_data = { path = "../generated_data" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
